minor UI fixes to stop overlapping onClick events and responsive view on header

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -87,7 +87,7 @@ h3 {
   display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
     .header #link {
       display: none;
     }
